experience section added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- top section  -->
-    <div class="container top-banner">
+    <section class="container top-banner">
         <div class="half-width">
             <h1>Welcome to <br> Nessie's World!</h1>
             <h2>Become a Web Developer</h2>
@@ -25,10 +25,10 @@
         <div class="half-width top-image">
             <img src="images/nessie-bg1.png" alt="">
         </div>
-    </div>
+    </section>
 
     <!-- Dream Big section  -->
-    <div class="container dream-big">
+    <section class="container dream-big">
         <div class="half-width">
             <img src="images/nessie-bg1.png" alt="">
         </div>
@@ -43,7 +43,30 @@
             <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Main_Page">Download Resume</a>
         </div>
 
-    </div>
+    </section>
+
+    <section class="experience">
+        <h1 class="title">Experiences</h1>
+        <div class="flexible">
+            <div class="experience-item right-margin">
+                <h1>Full Stack Developer</h1>
+                <h3>2022 - present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis nisi, quisquam, illum ipsa
+                    provident
+                    animi aliquam velit tempora aspernatur dolores minus sit architecto cumque numquam!</p>
+            </div>
+            <div class="experience-item">
+                <h1>Full Stack Developer</h1>
+                <h3>2022 - present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis nisi, quisquam, illum ipsa
+                    provident
+                    animi aliquam velit tempora aspernatur dolores minus sit architecto cumque numquam!</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>@Nessie Azad - 2022, a Shamssie initiative</p>
+    </footer>
 
 </body>
 
